src/javascript/app/components/Settings/index.scss
.settings {
  position: sticky;
  background: #fff;
  top: 0;
  box-shadow: 0 6px 6px #fff;

  &__grid {
    display: flex;
    gap: 24px;
  }

  &__button, &__file {
    margin-top: 17px;
  }

  &__label {
    font-size: 13px;
    display: block;
    margin-bottom: 4px;
  }

  &__group {
    display: flex;
    gap: 1px;
    margin-top: -17px;

    & > :not(:last-child) {
      border-top-right-radius: 0;
      border-bottom-right-radius: 0;
    }

    & > :not(:first-child) {
      border-top-left-radius: 0;
      border-bottom-left-radius: 0;
    }
  }
}

